--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "start": "nodemon server.js"
   },
   "author": "Mohammed Yadam",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+
+  }
 }
