--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "car parts inventroy system",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Mohammed Yadam",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "pg": "^8.3.0",
+    "pg-hstore": "^2.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
-
   }
 }
